set default value of event-subscriber to http_callback

--- a/repo/packages/M/marathon/2/config.json
+++ b/repo/packages/M/marathon/2/config.json
@@ -25,6 +25,7 @@
           "type": "boolean"
         },
         "event-subscriber": {
+          "default": "http_callback",
           "description": "Event subscriber module to enable. Currently the only valid value is \"http_callback\".",
           "type": "string"
         },
